--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
   }
   to {
     transform: rotate(360deg);
+
   }
 }
 
@@ -39,4 +40,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.table-bg {
+  background-image: url("./assets/table.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  height: 100vh; /* or whatever height you need */
 }
