--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  text-align: center;
   font-family: Arial, sans-serif;
 }
 
@@ -20,8 +21,51 @@ body,
   min-height: 100vh;
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+}
+
+/* ---------- MENU TITLE ---------- */
+.menu-title {
+  position: relative;
+  margin-top: 24px;
+  margin-bottom: auto;
+
+  font-size: 60px;
+  font-weight: 900;
+  letter-spacing: 6px;
+  color: #000;
+}
+.sub-title {
+  margin-top: 8px;
+  margin-bottom: 200px;
+
+  font-size: 18px;
+  font-weight: 800;
+  letter-spacing: 1px;
+  color: #000;
+}
+
+
+/* Decorative lines */
+.menu-title::before,
+.menu-title::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 300px;
+  height: 3px;
+  background-color: #000;
+}
+
+.menu-title::before {
+  right: 100%;
+  margin-right: 24px;
+}
+
+.menu-title::after {
+  left: 100%;
+  margin-left: 24px;
 }
 
 /* ---------- QR CONTAINER ---------- */
@@ -31,12 +75,14 @@ body,
   align-items: center;
   justify-content: center;
 
-  padding: 18px;
+ padding: 18px;
   background: rgba(255, 255, 255, 0.95);
   border-radius: 20px;
   box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
 
-  animation: float 3s ease-in-out infinite;
+  margin-bottom: 90px;
+
+  animation: float 3s ease-in-out infinite; 
 }
 
 /* ---------- QR IMAGE ---------- */
@@ -45,33 +91,59 @@ body,
   height: 150px;
 }
 
-
-/* ---------- FLOAT ANIMATION ---------- */
-@keyframes float {
-  0% {
-    transform: translateY(0px);
-  }
-  50% {
-    transform: translateY(-8px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+/* ---------- SCAN TEXT ---------- */
+.scan-text {
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  color: #000;
 }
 
 /* ---------- MOBILE RESPONSIVE ---------- */
 @media (max-width: 480px) {
+  .menu-title {
+    font-size: 34px;
+    letter-spacing: 4px;
+  }
+
+  .menu-title::before,
+  .menu-title::after {
+    width: 80px;
+  }
+
   .qr-image {
     width: 120px;
     height: 120px;
-  }
-
-  .qr-container {
-    padding: 14px;
-    border-radius: 16px;
   }
 
   .scan-text {
     font-size: 12px;
   }
 }
+/* ---------- FLOAT ANIMATION ---------- */
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/* ---------- PULSE ANIMATION ---------- */
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
